--- a/Project.ipynb
+++ b/Project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project Task from Criterion Networks\n",
+    "# Project Task\n",
     "***\n"
    ]
   },
