--- a/Project.ipynb
+++ b/Project.ipynb
@@ -190,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### File name : CriterionTask1.py\n",
+    "#### File name : Setup Configuration.py\n",
     "\n",
     "\n",
     "<img src=\"img/task8.png\" alt=\"taks8\">\n",
@@ -216,7 +216,7 @@
     "import os\n",
     "\n",
     "password = getpass.getpass()\n",
-    "command = \"sudo -S python2 codes\\/CriterionTask1.py\" # can be any command but don't forget -S as it enables input from stdin\n",
+    "command = \"sudo -S python2 codes\\/Setup Configuration.py\" # can be any command but don't forget -S as it enables input from stdin\n",
     "os.popen(command, 'w').write(password+'\\n'+'1')# newline char is important otherwise prompt will wait for you to manually perform newline"
    ]
   },
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### File name : CriterionTask2.py\n",
+    "#### File name : Testing Configuration.py\n",
     "\n",
     "\n",
     "<img src=\"img/task9.png\" alt=\"taks9\">\n",
@@ -264,7 +264,7 @@
    ],
    "source": [
     "password = getpass.getpass()\n",
-    "command = \"sudo -S python2 codes\\/CriterionTask2.py\" # can be any command but don't forget -S as it enables input from stdin\n",
+    "command = \"sudo -S python2 codes\\/Testing Configuration.py\" # can be any command but don't forget -S as it enables input from stdin\n",
     "os.popen(command, 'w').write(password+'\\n'+numberOfIteration)# newline char is important otherwise prompt will wait for you to manually perform newline"
    ]
   },
